tests/ui/internal/unstable-feature-bound.stderr
error[E0284]: type annotations needed: cannot satisfy `unstable feature: `feat_foo``
  --> $DIR/unstable-feature-bound.rs:7:5
   |
LL |     Bar::foo();
   |     ^^^ cannot satisfy `unstable feature: `feat_foo``
   |
   = note: required for `Bar` to implement `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
